--- a/static/index.html
+++ b/static/index.html
@@ -13,9 +13,10 @@
             <div class="cell"
                  ng-repeat="cell in ctrl.getArray() track by $index"
                  ng-init="yAxis = $index"
+                 ng-class="{'cell--highlight': ctrl.highlight[xAxis][yAxis]}"
                  ng-click="ctrl.activate(xAxis, yAxis)"
                  color-highlight="ctrl.cells[xAxis][yAxis]">
-                <span ng-if="ctrl.cells[xAxis][yAxis]">{{ ctrl.cells[xAxis][yAxis] }}</span>
+                <span ng-if="ctrl.cells[xAxis][yAxis]">{{ ::ctrl.cells[xAxis][yAxis] }}</span>
             </div>
         </div>
     </div>
