--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Fibonacci is your friend</title>
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body ng-app="gameApp">
